# GPUMCRPTDosimetry

./: CLAUDE.md  GEMINI.md  LICENSE  README.md  UserGuide.md  issues.md  pyproject.toml  radionuclide_max_energies.csv  requirements.txt  setup.py
.claude/: settings.local.json
.github/: copilot-instructions.md  physics_rpt_design_principle_updated.md  triton-coding-instructions.md  triton_highperformance_instructions.md
configs/: example_simulation.yaml
docs/: 12_decaydb_import_ensdf_icrp107.md  16_phase4_mvp_status.md  18_phase5_status.md  23_bucket_sizes_default.md  25_phase7_note_parent_subtraction.md  26_phase7_positron_transport.md  28_performance_tile_accum_plan.md  29_next_step_record_mode.md  30_sorted_voxel_tally_mode.md  32_phase7_4_sorted_voxel_graph_ready.md  34_phase8_hashed_tile_no_torch_nonzero_cumsum.md  35_phase8_1_8_2_hashed_tile_scan_and_bucket_workspace.md  36_phase8_3_workspace_scan.md  CDF_PDF_MC_suggestion.md  HU_to_RED_summary.md  REVIEW_COMPLETION_REPORT.md  TRITON_3.5.1_OPTIMIZATIONS.md  TRITON_3.5.1_coding_style.md  analysis.md  gemini3_pro_suggesions.md  glm4.7_suggestion.md  gpumcrpt_interaction_review.md  issues_20251227.01.md  milestone_1.md  milestone_2.md  milestone_3.md  milestone_4.md  phase10_complete.md  phase10_final_checks.md  phase10_final_wiring_notes.md  phase11_note_scan_workspace.md  phase11_triton_compaction_inplace_pack.md  phase11_validation_gate.md  phase9_1_log_uniform_ebin.md  phase9_3_rng_interface_unification.md  phase9_4_photoelectric_philox_rng.md  phase9_engine_insertion_notes.md  physics_approximations.md  (+6 more)
(+1500 files in other folders)
